Spring Security Configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.name=springit
 spring.datasource.generate-unique-name=false
 # JPA & Hibernate
 spring.jpa.show-sql=true
+# Security
+spring.security.user.roles=ADMIN
