--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ info.application.description=Reddit clone using Spring Boot 2
 info.application.version=0.0.1
 # actuator
 management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+management.endpoint.health.show-details=when_authorized
 # h2
 spring.h2.console.enabled=true
 # datasource (default to testdb)
