Finished registration method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.generate-unique-name=false
 spring.jpa.show-sql=true
 # Security
 spring.security.user.roles=ADMIN
+# Email
+spring.mail.host=localhost
+spring.mail.port=1025
